<resources>
    <!-- <string name="app_name">RubbishClassify</string> -->
    <string name="app_name">垃圾分类APP</string>
    <!-- loginUI相关string定义 -->
    <string name="login_welcome_1">您好，</string>
    <string name="login_welcome_2">欢迎访问 [RC] APP</string>
    <string name="action_login">登录</string>
    <string name="action_to_register">新用户注册</string>
    <string name="action_login_losePaw">忘记密码</string>

    <string name="login_prompt_account">请输入用户名</string>
    <string name="login_prompt_password">请输入密码</string>




    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"登录失败"</string>



    <!-- registerUI相关string定义 -->
    <string name="action_register">注册</string>



    <!-- 垃圾分类描述 -->
    <string name="recycled_rubbish">可回收垃圾</string>
    <string name="recycled_rubbish_remark">主要包括废纸、塑料、玻璃、金属和布料五大类</string>

    <string name="harmful_rubbish">有害垃圾</string>
    <string name="harmful_rubbish_remark">含有对人体健康有害的重金属和有毒的物质</string>

    <string name="kitchen_waste_rubbish">厨余垃圾</string>
    <string name="kitchen_waste_rubbish_remark">主要包括剩菜剩饭、骨头、菜根菜叶和果皮等食品类废物</string>

    <string name="other_rubbish">其他垃圾</string>
    <string name="other_rubbish_remark">也称作干垃圾，原则上为不属于其他三类的垃圾的总称</string>



<!--    tab setting str config-->
    <string name="setting_fun_ver_update">版本更新</string>
    <string name="setting_fun_theme">主题切换</string>
    <string name="setting_fun_user_info">设置</string>
    <string name="setting_fun_logout">注销账号</string>


<!--    扩展定义 -->
    <string name="fi_scan">&#xe6d2;</string>
    <string name="scan">扫一扫</string>

    <string name="fi_company_info">&#xe61a;</string>
    <string name="company_info">公司简介</string>

    <string name="fi_company_web">&#xe61e;</string>
    <string name="company_web">公司网站</string>

    <string name="fi_public_card">&#xe7c1;</string>
    <string name="public_card">公众二维码</string>

    <string name="fi_app_settings">&#xe6d1;</string>
    <string name="app_settings">设置</string>
    <string name="fi_app_exit">&#xe60d;</string>
    <string name="app_exit">退出</string>

    <string name="fi_station">&#xe61a;</string>

    <!--网页错误提示-->
    <string name="web_erro_t1">数据加载失败</string>
    <string name="web_erro_t2">请检查您的手机是否断网</string>
    <string name="web_erro_bt">重新加载</string>


    <!--主页功能菜单-->

    <string name="fi_home_station_alms">&#xe62a;</string>
    <string name="fi_home_station_order">&#xe606;</string>
    <string name="fi_home_station_num">&#xe65d;</string>

    <string name="home_station_alms">告警</string>
    <string name="home_station_order">派单</string>
    <string name="home_station_num">附近站点</string>


    <string name="fi_home_stations_list">&#xe662;</string>
    <string name="fi_home_stations_pos">&#xe658;</string>
    <string name="fi_home_stations_energy">&#xe714;</string>
    <string name="fi_home_stations_toltal_energy">&#xe661;</string>

    <string name="home_stations_list">站点列表</string>
    <string name="home_stations_pos">站点分布</string>
    <string name="home_stations_location">站点定位</string>
    <string name="home_stations_energy">能效排名</string>
    <string name="home_stations_toltal_energy">综合能源</string>

    <string name="fi_home_notice">&#xe66b;</string>
    <string name="fi_home_manage">&#xe605;</string>
    <string name="fi_home_safe_energy">&#xe623;</string>
    <string name="fi_home_more">&#xe604;</string>

    <string name="home_notice">公告提示</string>
    <string name="home_manage">运维管理</string>
    <string name="home_safe_energy">安全用电</string>
    <string name="home_more">更多</string>



    <string name="fi_me_ver">&#xe63c;</string>
    <string name="fi_me_theme">&#xe659;</string>
    <string name="me_ver">版本更新</string>
    <string name="me_theme">主题</string>
    <string name="me_downapp">是否下载更新app？</string>
    <string name="me_downloading">正在下载...</string>

    <string name="ok">确定</string>
    <string name="cancle">取消</string>

    <string name="bottomText">我是有底线的</string>

    <!--扫描-->
    <string name="scan_qrcode">将二维码放入框内，即可自动扫描</string>
    <string name="scan_qr">二维码</string>
    <string name="scan_scan">扫一扫</string>
    <string name="scan_result">扫描结果</string>
    <string name="scan_content">扫描内容</string>
    <string name="scan_back">返回</string>


</resources>
