<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="423dp"
        android:layout_height="275dp"
        app:srcCompat="@mipmap/repo_show" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="209dp"
            android:layout_height="match_parent"
            app:srcCompat="@mipmap/index_recycled" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="189dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/recycled_rubbish"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="189dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:text="@string/recycled_rubbish_remark" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="429dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="209dp"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/index_kitchen_waste" />

        <LinearLayout
            android:layout_width="193dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="191dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/kitchen_waste_rubbish"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="191dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:text="@string/kitchen_waste_rubbish_remark" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="209dp"
            android:layout_height="match_parent"
            app:srcCompat="@mipmap/index_harmful" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="191dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/harmful_rubbish"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="191dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:text="@string/harmful_rubbish_remark" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="421dp"
        android:layout_height="89dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="209dp"
            android:layout_height="match_parent"
            app:srcCompat="@mipmap/index_other" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="192dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/other_rubbish"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="193dp"
                android:layout_height="37dp"
                android:layout_weight="1"
                android:text="@string/other_rubbish_remark" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>