<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff"
    android:orientation="vertical"

    tools:context=".modules.ui.login.LoginActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginStart="@dimen/dimen_50"
        android:layout_marginLeft="@dimen/dimen_50"
        android:text="@string/login_welcome_1"
        android:textStyle="bold"
        android:textSize="30sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_50"
        android:layout_marginLeft="@dimen/dimen_50"
        android:text="@string/login_welcome_2"
        android:textStyle="bold"
        android:textSize="30sp"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ed_account"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_45"
        android:layout_marginTop="90dp"
        android:layout_marginStart="@dimen/dimen_50"
        android:layout_marginLeft="@dimen/dimen_50"
        android:layout_marginEnd="@dimen/dimen_40"
        android:layout_marginRight="@dimen/dimen_40"
        android:paddingStart="@dimen/dimen_10"
        android:paddingLeft="@dimen/dimen_10"
        android:hint="@string/login_prompt_account"
        android:background="#F8F8F8"
        tools:ignore="RtlSymmetry" />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ed_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_45"
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_marginStart="@dimen/dimen_50"
        android:layout_marginLeft="@dimen/dimen_50"
        android:layout_marginEnd="@dimen/dimen_40"
        android:layout_marginRight="@dimen/dimen_40"
        android:paddingStart="@dimen/dimen_10"
        android:paddingLeft="@dimen/dimen_10"
        android:hint="@string/login_prompt_password"
        android:background="#F8F8F8"
        />
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_45"
        android:layout_marginTop="@dimen/dimen_40"
        android:layout_marginStart="@dimen/dimen_45"
        android:layout_marginLeft="@dimen/dimen_45"
        android:layout_marginEnd="@dimen/dimen_35"
        android:layout_marginRight="@dimen/dimen_35"
        android:paddingStart="@dimen/dimen_10"
        android:paddingLeft="@dimen/dimen_10"
        android:text="@string/action_login"
        android:background="#2196F3"
        tools:ignore="RtlSymmetry" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_35"
        android:layout_marginRight="@dimen/dimen_35"
        android:layout_marginStart="@dimen/dimen_40"
        android:layout_marginLeft="@dimen/dimen_40"
        android:layout_marginTop="@dimen/dimen_10"
        >
        <TextView
            android:id="@+id/tv_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_to_register"
            android:layout_gravity="left"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            tools:ignore="NotSibling,RtlHardcoded" />

        <TextView
            android:id="@+id/tv_lose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_login_losePaw"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            tools:ignore="NotSibling" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>

